[a11y] Fix headings level in chrome://download-internals
On the download internals page (chrome://download-internals), change
h4 to h2 and change styling for h2 font size. This change is necessary
to avoid skipping heading ranks which can be confusing for screen
reader users.

This page will not look any different visually with this change.

Bug: 1394531
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4114753
Auto-Submit: Benjamin Beaudry <benjamin.beaudry@microsoft.com>
Commit-Queue: Min Qin <qinmin@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1088772}

--- a/components/download/resources/download_internals/download_internals.css
+++ b/components/download/resources/download_internals/download_internals.css
@@ -8,6 +8,10 @@ h1 {
   padding: 0;
 }
 
+h2 {
+  font-size: 1em;
+}
+
 .status {
   font-size: 15px;
 }
